crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_list__explicit_wins.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_list.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List (con (list integer) [42]) of
  Cons head#1 tail#2 -> head#1
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  (case
    (con (list integer) [42])
    (lam head_1 (lam tail_2 head_1))
    (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- isolated ANF input
case@List (con (list integer) [42]) of
  Cons head#1 tail#2 -> head#1
  _ -> trace "cold" in error
--- isolated folded Core
let head#1 : int = 42 in
let tail#2 : list int = (con (list integer) []) in
head#1
--- isolated cleaned Core
42
--- isolated UPLC before
(program 1.1.0
  (case
    (con (list integer) [42])
    (lam head_1 (lam tail_2 head_1))
    (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
--- isolated UPLC after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
