crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_list__function_head.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_list.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List mkCons (\p#31 : int -> p#31) (trace "tail" in (con (list integer) [7])) of
  Nil -> trace "cold" in error
  Cons ignored#32 ignored#33 -> trace "body" in 21
--- unoptimized UPLC
(program 1.1.0
  (case
    [[(force (builtin mkCons)) (lam p_31 p_31)]
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])]
    (lam ignored_32
      (lam ignored_33
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
    (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
--- optimized Core
let anf#4 : list int = trace "tail" in (con (list integer) [7]) in
let anf#5 : list int = mkCons (\p#1 : int -> p#1) anf#4 in
trace "body" in 21
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam builtin_8
      [(lam anf_2
        [(lam anf_6 (force [[builtin_7 (con string "body")] (delay (con integer 21))]))
          [[builtin_8 (lam p_3 p_3)] anf_2]])
        (force [[builtin_7 (con string "tail")] (delay (con (list integer) [7]))])])
      (force (builtin mkCons))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#34 : list int = trace "tail" in (con (list integer) [7]) in
let anf#35 : list int = mkCons (\p#31 : int -> p#31) anf#34 in
case@List anf#35 of
  Nil -> trace "cold" in error
  Cons ignored#32 ignored#33 -> trace "body" in 21
--- isolated folded Core
let anf#34 : list int = trace "tail" in (con (list integer) [7]) in
let list_field#36 : int -> int = \p#31 : int -> p#31 in
let anf#35 : list int = mkCons list_field#36 anf#34 in
let ignored#32 : int = list_field#36 in
let ignored#33 : list int = anf#34 in
trace "body" in 21
--- isolated cleaned Core
let anf#34 : list int = trace "tail" in (con (list integer) [7]) in
let anf#35 : list int = mkCons (\p#31 : int -> p#31) anf#34 in
trace "body" in 21
--- isolated UPLC before
(program 1.1.0
  [(lam anf_34
    [(lam anf_35
      (case
        anf_35
        (lam ignored_32
          (lam ignored_33
            (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
        (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
      [[(force (builtin mkCons)) (lam p_31 p_31)] anf_34]])
    (force
      [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_34
    [(lam anf_35
      (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))
      [[(force (builtin mkCons)) (lam p_31 p_31)] anf_34]])
    (force
      [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])])
--- result
error: NotAConstant(Lambda { parameter: DeBruijn(0), body: Var(DeBruijn(1)), env: Cons { data: Con(ProtoList(Integer, [Integer(7)])), next: Empty } })
--- logs
["tail"]
