crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_list__nil_binder.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_list.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(before), pretty(after))"
---
--- before
case@List (con (list integer) []) of
  Nil x#1 -> 42
--- after
case@List (con (list integer) []) of
  Nil x#1 -> 42
--- errors
InvalidCase("invalid list branch")
InvalidCase("invalid list branch")
