crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_list__nonempty.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_list.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List (con (list integer) [42, 7, 9]) of
  Cons head#5 tail#6 -> trace "cons" in tail#6
  Nil -> trace "nil" in (con (list integer) [0])
--- unoptimized UPLC
(program 1.1.0
  (case
    (con (list integer) [42, 7, 9])
    (lam head_5
      (lam tail_6
        (force [[(force (builtin trace)) (con string "cons")] (delay tail_6)])))
    (force
      [[(force (builtin trace)) (con string "nil")] (delay (con (list integer) [0]))])))
--- optimized Core
trace "cons" in (con (list integer) [7, 9])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "cons")] (delay (con (list integer) [7, 9]))]))
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@List (con (list integer) [42, 7, 9]) of
  Cons head#5 tail#6 -> trace "cons" in tail#6
  Nil -> trace "nil" in (con (list integer) [0])
--- isolated folded Core
let head#5 : int = 42 in
let tail#6 : list int = (con (list integer) [7, 9]) in
trace "cons" in tail#6
--- isolated cleaned Core
trace "cons" in (con (list integer) [7, 9])
--- isolated UPLC before
(program 1.1.0
  (case
    (con (list integer) [42, 7, 9])
    (lam head_5
      (lam tail_6
        (force [[(force (builtin trace)) (con string "cons")] (delay tail_6)])))
    (force
      [[(force (builtin trace)) (con string "nil")] (delay (con (list integer) [0]))])))
--- isolated UPLC after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "cons")]
      (delay (con (list integer) [7, 9]))]))
--- result
(con (list integer) [7, 9])
--- logs
["cons"]
