crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_list__partial_cons.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_list.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List mkCons 42 of
  _ -> 0
--- unoptimized UPLC
(program 1.1.0
  (case
    [(force (builtin mkCons)) (con integer 42)]
    (lam generated_2 (lam generated_1 (con integer 0)))
    (con integer 0)))
--- optimized Core
let anf#1 : list int = mkCons 42 in
case@List anf#1 of
  _ -> 0
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_2
      (case anf_2 (lam generated_4 (lam generated_3 (con integer 0))) (con integer 0)))
      [builtin_5 (con integer 42)]])
    (force (builtin mkCons))])
--- isolated pass
--- isolated ANF input
let anf#1 : list int = mkCons 42 in
case@List anf#1 of
  _ -> 0
--- isolated folded Core
let anf#1 : list int = mkCons 42 in
case@List anf#1 of
  _ -> 0
--- isolated cleaned Core
let anf#1 : list int = mkCons 42 in
case@List anf#1 of
  _ -> 0
--- isolated UPLC before
(program 1.1.0
  [(lam anf_1
    (case anf_1 (lam generated_3 (lam generated_2 (con integer 0))) (con integer 0)))
    [(force (builtin mkCons)) (con integer 42)]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_1
    (case anf_1 (lam generated_3 (lam generated_2 (con integer 0))) (con integer 0)))
    [(force (builtin mkCons)) (con integer 42)]])
--- result
error: NonConstrScrutinized(Builtin(Runtime { args: [Con(Integer(42))], fun: MkCons, forces: 1 }))
--- logs
[]
